<resources>
    <string name="app_name">SmartHouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart House</string>
    <string name="nav_header_subtitle">by AI department</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="house_monitor">House monitor</string>
    <string name="device_control">Device control</string>
    <string name="tools">Tools</string>
    <string name="camera">Camera</string>
    <string name="contact_with_devs">Contact with devs</string>
</resources>
